[gd_scene load_steps=5 format=3 uid="uid://cnxfydn53olav"]

[ext_resource type="Script" path="res://Scripts/lever.gd" id="1_p45kh"]
[ext_resource type="SpriteFrames" uid="uid://sf2berfue46f" path="res://Animations/RedLever.tres" id="2_ugd4d"]
[ext_resource type="AudioStream" uid="uid://btjnopm1n8nix" path="res://Sounds/lever.ogg" id="3_sh3be"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_smr02"]
size = Vector2(21.5, 18)

[node name="Lever" type="Area2D"]
script = ExtResource("1_p45kh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(10.75, 9)
shape = SubResource("RectangleShape2D_smr02")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(11, 10)
scale = Vector2(1.03125, 1)
sprite_frames = ExtResource("2_ugd4d")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_sh3be")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
